@@ -468,6 +468,6 @@ int ACE_TMAIN (int argc, ACE_TCHAR **argv)
       return -1;
     }
 
-  return 0;
+  return retval;
 }
 
